--- a/resources/sass/partials/_jumbotron.scss
+++ b/resources/sass/partials/_jumbotron.scss
@@ -1,5 +1,5 @@
 #jumbotron {
     height: 450px;
-    background: url('../public/images/jumbotron.jpg');
+    background: url('/images/jumbotron.jpg');
     background-size: cover;
 }
