--- a/resources/sass/partials/_mainContent.scss
+++ b/resources/sass/partials/_mainContent.scss
@@ -1,4 +1,5 @@
 .main{
+    padding: 50px;
     width: 100%;
     background: #1c1c1c;
     position: relative;
@@ -9,7 +10,7 @@
     .cards-container{
         display: flex;
         flex-wrap: wrap;
-        padding: 50px 30px;
+        padding: 30px;
     }
     #load-more-section{
         display: flex;
