--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,7 @@
 // BOOTSTRAP
 @import "~bootstrap/scss/bootstrap";
+// VARIABLES
+@import "./partials/variables";
 // MAIN SCSS
 @import "./partials/main";
 
