--- a/resources/sass/partials/_mainContent.scss
+++ b/resources/sass/partials/_mainContent.scss
@@ -39,7 +39,7 @@
         }
     }
     h5{
-        color: #fff;
+        color: $text-primary-color;
         font-size: 15px;
         font-weight: 400;
         margin-top: 15px;
