adds the active dynamic class to nav items

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,5 +14,7 @@
 // MAIN CONTENT
 @import "./partials/mainContent";
 
+// PRE FOOTER
+@import "./partials/preFooter";
 //FOOTER
 @import "./partials/footer";
