--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12183,6 +12183,14 @@ fieldset:disabled .btn {
   cursor: pointer;
 }
 
+.active {
+  border-color: #0282f9;
+}
+
+.active a {
+  color: #0282f9;
+}
+
 header {
   height: 110px;
   background: #fff;
@@ -12217,14 +12225,6 @@ header nav ul li {
 header nav ul li a {
   text-decoration: none;
   color: #444;
-}
-
-header nav ul li:hover {
-  border-color: #0282f9;
-}
-
-header nav ul li:hover a {
-  color: #0282f9;
 }
 
 header .searchbar {
@@ -12315,28 +12315,28 @@ header .searchbar input::placeholder {
   margin-top: 15px;
 }
 
-footer #shop-shortcut-section {
+#shop-shortcut-section {
   background: #0282f9;
   color: #fff;
 }
 
-footer #shop-shortcut-section > div {
+#shop-shortcut-section > div {
   padding: 30px;
 }
 
-footer #shop-shortcut-section > div ul {
+#shop-shortcut-section > div ul {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-footer #shop-shortcut-section > div ul li {
+#shop-shortcut-section > div ul li {
   font-size: 12px;
   display: flex;
   align-items: center;
 }
 
-footer #shop-shortcut-section > div ul li .shortcut-icon {
+#shop-shortcut-section > div ul li .shortcut-icon {
   width: 45px;
   margin-right: 15px;
 }
